Fix: Google API key toegevoegd en variabelen gecontroleerd

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     <script>
         // CONFIGURATIE
-        const Maps_API_KEY = 'JOUW_GOOGLE_API_KEY'; // <-- VERVANG DEZE MET JE ECHTE, BEPERKTE GOOGLE KEY
+        const Maps_API_KEY = 'AIzaSyBfNr9YI7ba6kVZdQDLNDvs82NNo5TtXb0'; // <-- VERVANG DEZE MET JE ECHTE, BEPERKTE GOOGLE KEY
         const AGENDA_ID = 44523;
 
         // Dit is de MAPPING van de API categorie naar jouw locatiegegevens.
