--- a/index.html
+++ b/index.html
@@ -135,9 +135,9 @@
             // CONFIGURATIE
             const Maps_API_KEY = 'AIzaSyBfNr9YI7ba6kVZdQDLNDvs82NNo5TtXb0'; // Controleer of dit je ECHTE Google Maps API Key is!
             const AGENDA_ID = 44523;
-            const GEWENST_AFSPRAAKTYPE_NAAM = process.env.GEWENST_AFSPRAAKTYPE_NAAM;
+            // const GEWENST_AFSPRAAKTYPE_NAAM = process.env.GEWENST_AFSPRAAKTYPE_NAAM;
 
-            // const GEWENST_AFSPRAAKTYPE_NAAM = "Combikeuring CDE/geneeskundige verklaring personenvervoer";
+            const GEWENST_AFSPRAAKTYPE_NAAM = "Combikeuring CDE/geneeskundige verklaring personenvervoer";
             const locatieStamdata = {
                 "Amsterdam West": { adres: "Corantijnstraat 25, Amsterdam", lat: 52.3702, lng: 4.8545 },
                 "Almere": { adres: "Markerkant 13-10, Almere", lat: 52.3719, lng: 5.2228 },
